chore: extend MockEnrollmentPeriodInitializer to account for latest changes in features and persistence schema